--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Molecular-Playground/ms-email#readme",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "debug": "~2.2.0",
     "express": "^4.13.4",
     "morgan": "^1.7.0",
     "nodemailer": "^2.2.1"
